data/derived/sp14/progs/unify/prog2704.ml.out
Characters 14-28:
  let _ = build(makeRand(5,16),5);;
                ^^^^^^^^^^^^^^
Error: This expression has type int * int -> int
       but an expression was expected of type int -> int -> int
       Type int * int is not compatible with type int 
